Fixed about and cucc buttons not centering on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -11,18 +11,6 @@ h1 {
     font-size: 7em;
 }
 
-@media(max-height:768px) {
-    h1 {
-        padding: 20px;
-    }
-}
-
-@media(max-width:768px) {
-    .col-sm-4.text-center {
-        display: none;
-    }
-}
-
 h2 {
     font-size: 3.6em;
     font-weight: 600;
@@ -36,6 +24,21 @@ p {
     font-size: 1.7em;
 }
 
+@media(max-height:768px) {
+    h1 {
+        padding: 20px;
+    }
+}
+
+/* Remove daily puzzle on mobile, center title */
+@media(max-width:768px) {
+    .col-sm-4.text-center {
+        display: none;
+    }
+    h2 {
+        text-align: center;
+    }
+}
 
 .end-description {
     margin: 0px 0px 20px 0px;
@@ -81,6 +84,16 @@ p {
 .centerButtons {
     display: table;
     margin: 0 auto;
+}
+.centerButtonMobile {
+    text-align: center;
+    display: inline;
+}
+/* Hack to get buttons to center once they start stacking */
+@media(max-width:609px) {
+    .centerButtonMobile {
+        display: block;
+    }
 }
 
 /* Header Image Background */
